# nousviz-app

./: .env.example  .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-LICENSES.md  cli.py  ecosystem.config.js  install.sh  pyproject.toml
.github/: CODEOWNERS  dep-audit-allowlist.txt  expected-tables.txt  pull_request_template.md
apps/: global_annotations.json
core/: README.md
docs/: admin-cli.md  api-reference.md  client-sdk.md  contributing-a-plugin.md  deploy-workflow.md  design-system.md  developer-guide.md  glossary.md  sdk-reference.md  (+7 more)
sdk/: CHANGELOG.md  README.md  pyproject.toml
sdk/examples/: LICENSE
sdk/examples/starter-plugin/: README.md  dataport.yaml  insights.yaml  plugin.yaml
sdk/examples/starter-plugin/api/: routes.py
sdk/examples/starter-plugin/dashboards/: overview.yaml
sdk/examples/starter-plugin/modules/analytics/: module.yaml
sdk/examples/starter-plugin/modules/analytics/api/: routes.py
sdk/examples/starter-plugin/modules/analytics/dashboards/: analytics.yaml
sdk/examples/starter-plugin/modules/analytics/storage/migrations/: 001_analytics.sql
sdk/examples/starter-plugin/src/: sync.py
sdk/examples/starter-plugin/storage/migrations/: 001_initial.sql  001_initial_down.sql
sdk/nousviz_sdk/: __init__.py  _broker_client.py  _hook_runner.py  auth.py  credentials.py  db.py  hooks.py  jobs.py  logging.py  oauth.py  progress.py  routing.py  schedule.py  settings.py  sync.py  testing.py
sdk/widget-types/: nousviz_widget_types.d.ts
(+473 files in other folders)
