[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nousviz-sdk"
version = "1.0.0"
description = "Plugin development SDK for Nousviz"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.urls]
Homepage = "https://github.com/nousviz/nousviz-app"
Documentation = "https://github.com/nousviz/nousviz-app/tree/main/sdk"
Repository = "https://github.com/nousviz/nousviz-app"

[tool.setuptools.packages.find]
where = ["."]
include = ["nousviz_sdk*"]
